# awesome-sim

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json  index.html  pyproject.toml
.github/workflows/: ci.yml
css/: nfdi4ing-theme.css  slides.css
docs/: generate_hero_image.py
examples/: README.md  minimal_example.py
src/awesome_sim/: __init__.py  solver.py  viz.py
tests/: test_solver.py
